--- a/.gitignore
+++ b/.gitignore
@@ -20,7 +20,9 @@ api/fabcar/javascript/wallet
 test-network/channel-artifacts/
 test-network/organizations/ordererOrganizations/
 test-network/organizations/peerOrganizations/
+test-network/log.txt
 
 # Ignore Gradle build output directory
 build
 package-lock.json
+caliper.log
