--- a/common-utils/private-data/car-collections_config.json
+++ b/common-utils/private-data/car-collections_config.json
@@ -1,35 +1,23 @@
 [
     {
-        "name": "carCollection",
-        "policy": "OR('Org1MSP.member', 'Org2MSP.member')",
-        "requiredPeerCount": 1,
-        "maxPeerCount": 1,
-        "blockToLive": 1000000,
-        "memberOnlyRead": true,
-        "memberOnlyWrite": true
+         "name": "collectionCars",
+         "policy": "OR('Org1MSP.member', 'Org2MSP.member')",
+         "requiredPeerCount": 0,
+         "maxPeerCount": 3,
+         "blockToLive": 1000000,
+         "memberOnlyRead": true,
+         "memberOnlyWrite": true
     },
     {
-        "name": "Org1MSPCarPrivateCollection",
-        "policy": "OR('Org1MSP.member')",
-        "requiredPeerCount": 0,
-        "maxPeerCount": 1,
-        "blockToLive": 3,
-        "memberOnlyRead": true,
-        "memberOnlyWrite": true,
-        "endorsementPolicy": {
-            "signaturePolicy": "OR('Org1MSP.member')"
-        }
-    },
-    {
-        "name": "Org2MSPCarPrivateCollection",
-        "policy": "OR('Org2MSP.member')",
-        "requiredPeerCount": 0,
-        "maxPeerCount": 1,
-        "blockToLive": 3,
-        "memberOnlyRead": true,
-        "memberOnlyWrite": true,
-        "endorsementPolicy": {
-            "signaturePolicy": "OR('Org2MSP.member')"
-        }
+         "name": "collectionCarPrivateDetails",
+         "policy": "OR('Org1MSP.member')",
+         "requiredPeerCount": 0,
+         "maxPeerCount": 3,
+         "blockToLive": 3,
+         "memberOnlyRead": true,
+         "memberOnlyWrite": true,
+         "endorsementPolicy": {
+              "signaturePolicy": "OR('Org1MSP.member')"
+         }
     }
 ]
